added navigation VC and alerts

--- a/wordleGame/Views/letterSpaceView/letterSpaceView.xib
+++ b/wordleGame/Views/letterSpaceView/letterSpaceView.xib
@@ -20,10 +20,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLq-KK-NqZ">
-                    <rect key="frame" x="73" y="71" width="54" height="102"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="85"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
+                    <rect key="frame" x="82" y="89" width="36" height="66"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="55"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
