--- a/wordleGame/Base.lproj/Main.storyboard
+++ b/wordleGame/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-219" y="327"/>
+            <point key="canvasLocation" x="252" y="223"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="LAQ-v2-OHb">
@@ -54,25 +54,106 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3kv-D4-SZm">
-                                <rect key="frame" x="55" y="127" width="305" height="68.5"/>
-                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="51"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="hOZ-En-Re8">
+                                <rect key="frame" x="37" y="256.5" width="340" height="257.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3kv-D4-SZm">
+                                        <rect key="frame" x="0.0" y="0.0" width="340" height="55.5"/>
+                                        <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="51"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="yRh-Gm-uh5">
+                                        <rect key="frame" x="0.0" y="105.5" width="340" height="152"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="cVJ-pE-uqm">
+                                                <rect key="frame" x="0.0" y="0.0" width="340" height="34"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPD-MF-YuB">
+                                                        <rect key="frame" x="0.0" y="0.0" width="78" height="34"/>
+                                                        <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="32"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G7B-Vh-LaM">
+                                                        <rect key="frame" x="291" y="0.0" width="51" height="34"/>
+                                                        <color key="onTintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <connections>
+                                                            <action selector="pressSoundButton:" destination="FZn-eH-xVZ" eventType="valueChanged" id="cUh-C3-8jQ"/>
+                                                        </connections>
+                                                    </switch>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gvg-dr-8Xl">
+                                                <rect key="frame" x="0.0" y="59" width="340" height="34"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leaderboard record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KEb-1L-n53">
+                                                        <rect key="frame" x="0.0" y="0.0" width="291" height="34"/>
+                                                        <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="32"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Gn-cK-bXn">
+                                                        <rect key="frame" x="291" y="0.0" width="51" height="34"/>
+                                                        <color key="onTintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <connections>
+                                                            <action selector="pressGamefieldButton:" destination="FZn-eH-xVZ" eventType="valueChanged" id="UO7-5L-NKM"/>
+                                                        </connections>
+                                                    </switch>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="aTi-A5-Xqm">
+                                                <rect key="frame" x="0.0" y="118" width="340" height="34"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Attempts:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RU9-eh-U0h">
+                                                        <rect key="frame" x="0.0" y="0.0" width="129.5" height="34"/>
+                                                        <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="31"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dm4-2E-zDF">
+                                                        <rect key="frame" x="163" y="0.0" width="50" height="34"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="iu5-07-EGM">
+                                                        <rect key="frame" x="246" y="0.0" width="94" height="34"/>
+                                                        <connections>
+                                                            <action selector="pressStepperButton:" destination="FZn-eH-xVZ" eventType="valueChanged" id="W0P-JM-EAI"/>
+                                                        </connections>
+                                                    </stepper>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="340" id="mYq-1O-cBR"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="FZ1-Px-t3f"/>
                         <color key="backgroundColor" systemColor="systemGray3Color"/>
                         <constraints>
-                            <constraint firstItem="3kv-D4-SZm" firstAttribute="leading" secondItem="FZ1-Px-t3f" secondAttribute="leading" constant="55" id="DXm-3G-dIZ"/>
-                            <constraint firstItem="3kv-D4-SZm" firstAttribute="top" secondItem="FZ1-Px-t3f" secondAttribute="top" constant="83" id="b8M-x8-9gt"/>
-                            <constraint firstItem="3kv-D4-SZm" firstAttribute="centerX" secondItem="FZ1-Px-t3f" secondAttribute="centerX" id="miC-Xx-QpB"/>
+                            <constraint firstItem="hOZ-En-Re8" firstAttribute="centerX" secondItem="FZ1-Px-t3f" secondAttribute="centerX" id="fKq-9b-ovK"/>
+                            <constraint firstItem="hOZ-En-Re8" firstAttribute="centerY" secondItem="FZ1-Px-t3f" secondAttribute="centerY" multiplier="0.85" id="i0m-LR-dYU"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="attemptsNumberField" destination="dm4-2E-zDF" id="6rO-Mo-iTR"/>
+                        <outlet property="stepperButton" destination="iu5-07-EGM" id="w20-hg-C6E"/>
+                        <outlet property="swichLeaderboardRec" destination="0Gn-cK-bXn" id="phN-gJ-g8X"/>
+                        <outlet property="swichSound" destination="G7B-Vh-LaM" id="PMN-02-q8g"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vzr-NN-hIs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1097" y="1083"/>
+            <point key="canvasLocation" x="-1097.1014492753625" y="1082.8125"/>
         </scene>
         <!--Leaderboard View Controller-->
         <scene sceneID="6SR-3h-Vtk">
@@ -88,15 +169,27 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="yHD-Au-cgq">
+                                <rect key="frame" x="10" y="244" width="394" height="418"/>
+                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                <color key="sectionIndexBackgroundColor" systemColor="systemGray3Color"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="nVo-HJ-BNn"/>
                         <color key="backgroundColor" systemColor="systemGray3Color"/>
                         <constraints>
                             <constraint firstItem="ptR-Ys-26N" firstAttribute="leading" secondItem="nVo-HJ-BNn" secondAttribute="leading" constant="55" id="2iK-vp-FV4"/>
+                            <constraint firstItem="yHD-Au-cgq" firstAttribute="centerY" secondItem="nVo-HJ-BNn" secondAttribute="centerY" id="3vx-x2-QEo"/>
+                            <constraint firstItem="yHD-Au-cgq" firstAttribute="leading" secondItem="nVo-HJ-BNn" secondAttribute="leading" constant="10" id="FOJ-sV-jfL"/>
+                            <constraint firstItem="yHD-Au-cgq" firstAttribute="top" secondItem="nVo-HJ-BNn" secondAttribute="top" constant="200" id="KNo-iM-evr"/>
                             <constraint firstItem="ptR-Ys-26N" firstAttribute="centerX" secondItem="nVo-HJ-BNn" secondAttribute="centerX" id="awO-EP-DWe"/>
                             <constraint firstItem="ptR-Ys-26N" firstAttribute="top" secondItem="nVo-HJ-BNn" secondAttribute="top" constant="94" id="l7a-5f-K2m"/>
+                            <constraint firstItem="yHD-Au-cgq" firstAttribute="centerX" secondItem="nVo-HJ-BNn" secondAttribute="centerX" id="xaD-aB-ev6"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="leaderboardTableView" destination="yHD-Au-cgq" id="XC8-KZ-YpH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mcL-Zh-g7K" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -105,7 +198,6 @@
         <!--Navigation Controller-->
         <scene sceneID="LDb-fr-ey9">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GSz-hf-9D6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController id="bgU-Jw-2o3" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fN4-b4-3A7">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -115,6 +207,7 @@
                         <segue destination="4mf-qR-EyD" kind="relationship" relationship="rootViewController" id="cbO-cS-Xlj"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GSz-hf-9D6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1984" y="743"/>
         </scene>
@@ -179,6 +272,9 @@
                                         <buttonConfiguration key="configuration" style="plain" title="Exit">
                                             <attributedString key="attributedSubtitle"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="pressExitButton:" destination="4mf-qR-EyD" eventType="touchUpInside" id="2k8-i3-gja"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
